added missing localizations

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1007,6 +1007,45 @@
     "profile_register_company_section_button_title": "Zur Registrierung",
     "@profile_register_company_section_button_title": {
         "description": "Button Text für die Unternehmensregistrierungs Sektion auf der Profilseite"
+    },
+    "profile_image_upload_tooltip": "Bild hochladen",
+    "@profile_image_upload_tooltip": {
+        "description": "Tooltip für Bilder Upload auf der Profilseite"
+    },
+    "landingpage_overview_edit_tooltip": "Landingpage bearbeiten",
+    "@landingpage_overview_edit_tooltip": {
+        "description": "Tooltip für das Bearbeiten einer Landingpage auf der Übersichtsseite"
+    },
+    "profile_edit_email_tooltip": "E-Mail Adresse ändern",
+    "@profile_edit_email_tooltip": {
+        "description": "Tooltip für den Button für das Ändern der E-Mail Adresse auf der Profilseite"
+    },
+    "theme_switch_lightmode_tooltip": "Heller Modus",
+    "@theme_switch_lightmode_tooltip": {
+        "description": "Tooltip für den Theme Switcher Light Mode Button im Menü"
+    },
+    "theme_switch_darkmode_tooltip": "Dunkler Modus",
+    "@theme_switch_darkmode_tooltip": {
+        "description": "Tooltip für den Theme Switcher Dark Mode Button im Menü"
+    },
+    "promoter_overview_reset_search_tooltip": "Suche zurücksetzen",
+    "@promoter_overview_reset_search_tooltip": {
+        "description": "Tooltip für den Suche zurücksetzen Button in der Promoter Übersicht"
+    },
+    "promoter_overview_filter_tooltip": "Promoter filtern",
+    "@promoter_overview_filter_tooltip": {
+        "description": "Tooltip für den Filter Button in der Promoter Übersicht"
+    },
+    "promoter_overview_view_switch_grid_tooltip": "Gridansicht",
+    "@promoter_overview_view_switch_grid_tooltip": {
+        "description": "Tooltip für den Grid Button in der Promoter Übersicht"
+    },
+    "promoter_overview_view_switch_table_tooltip": "Listenansicht",
+    "@promoter_overview_view_switch_table_tooltip": {
+        "description": "Tooltip für den Listen Button in der Promoter Übersicht"
+    },
+    "recommendations_form_add_button_tooltip": "Empfehlung hinzufügen",
+    "@recommendations_form_add_button_tooltip": {
+        "description": "Tooltip für den Empfehlung hinzufügen Button im Empfehlungsformular"
     }
 }
-//TODO: Hier müssen noch alle Tooltip Localizations hinzugefügt werden!!!
