--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1007,5 +1007,45 @@
     "profile_register_company_section_button_title": "Go to registration",
     "@profile_register_company_section_button_title": {
         "description": "Button text for the company registration section on the profile page"
+    },
+    "profile_image_upload_tooltip": "Upload image",
+    "@profile_image_upload_tooltip": {
+        "description": "Tooltip for the image upload on the profile page"
+    },
+    "landingpage_overview_edit_tooltip": "Edit landingpage",
+    "@landingpage_overview_edit_tooltip": {
+        "description": "Tooltip for landingpage edit button on the landingpage overview"
+    },
+    "profile_edit_email_tooltip": "Change email address",
+    "@profile_edit_email_tooltip": {
+        "description": "Tooltip for the button for changing the email address on the profile page"
+    },
+    "theme_switch_lightmode_tooltip": "Lightmode",
+    "@theme_switch_lightmode_tooltip": {
+        "description": "Tooltip for the Theme Switcher Light Mode button in the menu"
+    },
+    "theme_switch_darkmode_tooltip": "Darkmode",
+    "@theme_switch_darkmode_tooltip": {
+        "description": "Tooltip for the Theme Switcher Light Mode button in the menu"
+    },
+    "promoter_overview_reset_search_tooltip": "Reset search",
+    "@promoter_overview_reset_search_tooltip": {
+        "description": "Tooltip for the reset search button on the promoter overview page"
+    },
+    "promoter_overview_filter_tooltip": "Filter promoters",
+    "@promoter_overview_filter_tooltip": {
+        "description": "Tooltip for the filter button on the promoter overview page"
+    },
+    "promoter_overview_view_switch_grid_tooltip": "Grid view",
+    "@promoter_overview_view_switch_grid_tooltip": {
+        "description": "Tooltip for the grid button on the promoter overview page"
+    },
+    "promoter_overview_view_switch_table_tooltip": "List view",
+    "@promoter_overview_view_switch_table_tooltip": {
+        "description": "Tooltip for the table button on the promoter overview page"
+    },
+    "recommendations_form_add_button_tooltip": "Add recommendation",
+    "@recommendations_form_add_button_tooltip": {
+        "description": "Tooltip for the add recommendation button in the recommendations form"
     }
 }
