--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -616,6 +616,14 @@
     "@register_promoter_snackbar_success": {
         "description": "Der Titel der Snackbar wenn neuer Promoter registriert wurde"
     },
+    "register_promoter_no_landingpage_title": "Du hast noch keine Landingpage erstellt",
+    "@register_promoter_no_landingpage_title": {
+        "description": "Der Titel der Seite die erscheint, wenn du noch keine Landingpage hast und trotzdem einen Promoter registrieren willst"
+    },
+    "register_promoter_no_landingpage_subtitle": "Um einen neuen Promoter erstellen zu können ist es nötig, eine aktive Landingpage zu haben.",
+    "@register_promoter_no_landingpage_subtitle": {
+        "description": "Der Subtitle der Seite die erscheint, wenn du noch keine Landingpage hast und trotzdem einen Promoter registrieren willst"
+    },
     "promoter_overview_title": "Meine Promoter",
     "@promoter_overview_title": {
         "description": "Der Titel der Promoter Übersicht"
