--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -268,6 +268,10 @@
     "@landingpage_create_promotion_template_placeholder": {
         "description": "Platzhalter für das Promotion Template Textfeld"
     },
+    "landingpage_create_promotion_template_default_text": "Das ist eine Vorlage für Empfehlungen.",
+    "@landingpage_create_promotion_template_default_text": {
+        "description": "Der Promotion Template Text wird durch diesen Text ersetzt, wenn er nicht gesetzt wurde"
+    },
     "emoji_search_placeholder": "Suche Emoji",
     "@emoji_search_placeholder": {
         "description": "Platzhalter für die Suchleiste für die Emoji Suche"
