--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -268,6 +268,10 @@
     "@landingpage_create_promotion_template_placeholder": {
         "description": "Placeholder for the promotion template textfield"
     },
+    "landingpage_create_promotion_template_default_text": "This is the promotion template.",
+    "@landingpage_create_promotion_template_default_text": {
+        "description": "The promotion template text will be replaced with this text if it is not set"
+    },
     "emoji_search_placeholder": "Search Emoji",
     "@emoji_search_placeholder": {
         "description": "Placeholder for the search bar for the emoji search"
