added pagebuilder basic container

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1075,5 +1075,9 @@
     "recommendations_form_add_button_tooltip": "Empfehlung hinzufügen",
     "@recommendations_form_add_button_tooltip": {
         "description": "Tooltip für den Empfehlung hinzufügen Button im Empfehlungsformular"
+    },
+    "landingpage_pagebuilder_container_request_error": "Beim Abruf der Daten ist ein Fehler aufgetreten",
+    "@landingpage_pagebuilder_container_request_error": {
+        "description": "Fehlermeldung auf der Pagebuilder Seite wenn Request fehlschlägt"
     }
 }
