--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1083,5 +1083,13 @@
     "landingpage_pagebuilder_container_request_error": "Beim Abruf der Daten ist ein Fehler aufgetreten",
     "@landingpage_pagebuilder_container_request_error": {
         "description": "Fehlermeldung auf der Pagebuilder Seite wenn Request fehlschlägt"
+    },
+    "landingpage_pagebuilder_container_permission_error_title": "Du bist nicht berechtigt diese Seite aufzurufen",
+    "@landingpage_pagebuilder_container_permission_error_title": {
+        "description": "Fehlermeldung Titel auf der Pagebuilder Seite wenn Berechtigung nicht da ist"
+    },
+    "landingpage_pagebuilder_container_permission_error_message": "Du hast nicht die entsprechende Berechtigung um diese Seite zu aufzurufen. Melde dich bitte mit einem Account an der dazu berechtigt ist.",
+    "@landingpage_pagebuilder_container_permission_error_message": {
+        "description": "Fehlermeldung Text auf der Pagebuilder Seite wenn Berechtigung nicht da ist"
     }
 }
