--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1082,6 +1082,14 @@
     },
     "landingpage_pagebuilder_container_request_error": "An error occurred while retrieving the data",
     "@landingpage_pagebuilder_container_request_error": {
-        "description": "Error message on the page builder page if request fails"
+        "description": "Error title on the page builder page if request fails"
+    },
+    "landingpage_pagebuilder_container_permission_error_title": "You are not authorized to access this page",
+    "@landingpage_pagebuilder_container_permission_error_title": {
+        "description": "Error title on the page builder page if permission denied"
+    },
+    "landingpage_pagebuilder_container_permission_error_message": "You do not have the appropriate permission to access this page. Please log in with an account that is authorized to do so.",
+    "@landingpage_pagebuilder_container_permission_error_message": {
+        "description": "Error message on the page builder page if permission denied"
     }
 }
