--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1091,5 +1091,9 @@
     "landingpage_pagebuilder_container_permission_error_message": "Du hast nicht die entsprechende Berechtigung um diese Seite zu aufzurufen. Melde dich bitte mit einem Account an der dazu berechtigt ist.",
     "@landingpage_pagebuilder_container_permission_error_message": {
         "description": "Fehlermeldung Text auf der Pagebuilder Seite wenn Berechtigung nicht da ist"
+    },
+    "landingpage_pagebuilder_appbar_save_button_title": "Speichern",
+    "@landingpage_pagebuilder_appbar_save_button_title": {
+        "description": "Text des Speichern Buttons im Page Builder"
     }
 }
