added error handling for pagebuilder saving and added localizations

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1095,5 +1095,17 @@
     "landingpage_pagebuilder_appbar_save_button_title": "Speichern",
     "@landingpage_pagebuilder_appbar_save_button_title": {
         "description": "Text des Speichern Buttons im Page Builder"
+    },
+    "landingpage_pagebuilder_save_error_alert_title": "Speichern fehlgeschlagen",
+    "@landingpage_pagebuilder_save_error_alert_title": {
+        "description": "Titel des Fehler Alerts der erscheint wenn das Speichern im Page Builder fehlgeschlagen ist"
+    },
+    "landingpage_pagebuilder_save_error_alert_message": "Beim Speichern deiner neuen Landingpage Inhalte ist ein Fehler aufgetreten. Bitte versuche es später noch einmal.",
+    "@landingpage_pagebuilder_save_error_alert_message": {
+        "description": "Text des Fehler Alerts der erscheint wenn das Speichern im Page Builder fehlgeschlagen ist"
+    },
+    "landingpage_pagebuilder_save_error_alert_button": "OK",
+    "@landingpage_pagebuilder_save_error_alert_button": {
+        "description": "Button Text des Fehler Alerts der erscheint wenn das Speichern im Page Builder fehlgeschlagen ist"
     }
 }
